--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
                     <li><a href="#">About</a></li>   
                     <li><a href="#">Contact</a></li>                    
                 </ul>
-                <a href="#">New link</a>
+                <a href="#" class ="menu-button">New link</a>
             </div>
         </nav>
     </header>
