--- a/project.html
+++ b/project.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewProject</title>
+    <title>Web-Site-Project</title>
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <!--header start-->
+    <!--header başlamgıç-->
     <header class="container">
         <nav>
             <div class="logo">
@@ -25,6 +25,19 @@
             </div>
         </nav>
     </header>
-    <!--header end-->
+    <!--header bitiş-->
+
+    <!--içerik-->
+    <section class="container content">
+        <h1>hi its my web site</h1>
+        <p>this is a homework gived by Buse yaren tekin</p>
+        <div class="icerik">
+            <a href="#">Learn more</a>
+            <a href="#">Social media</a>
+        </div>
+    
+    </section>
+    <!--içerik bitiş-->
+
 </body>
 </html>
