--- a/Ana Sayfa.html
+++ b/Ana Sayfa.html
@@ -13,7 +13,7 @@
 
     
     <div class="container1">
-        <h1>Turkish Biyography</h1>
+        <h1>Turkish Biography</h1>
     </div>
     <!----navbar--->
     <header class="container">
@@ -28,7 +28,7 @@
                     <li><a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/hakkimizda.html">About</a></li>   
                     <li><a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/ileti%C5%9Fim.html">Contact</a></li>                    
                 </ul>
-                <a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/Ana%20Sayfa.html#" class="menu-button">Bizi paylaş</a>
+                <a href="" class="menu-button">Bizi paylaş</a>
             </div>
         </nav>
     </header>
@@ -59,8 +59,14 @@
         </p>
         </a>
     </div>
-    <div class="telif">
-        <p>all copyrights reserved©</p>
-    </div>
+
+   <ul class="liste">
+    <li>
+        All copyrights reserved©
+    </li>
+    <li>
+        Made With ❤️
+    </li>
+   </ul>
 </body>
 </html>
