--- a/faraday.html
+++ b/faraday.html
@@ -17,9 +17,9 @@
             
             <div class="menu">
                 <ul>
-                    <li><a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/Ana%20Sayfa.html#">Home2</a></li>    
-                    <li><a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/hakkimizda.html">About</a></li>   
-                    <li><a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/ileti%C5%9Fim.html">Contact</a></li>                    
+                    <li><a href="hakkımızda.html">Hakkımızda</a></li>
+                    <li><a href="iletişim.html">Bize ulaş</a></li>       
+                    <li><a href="iletişim.html">Bizi paylaş</a></li>           
                 </ul>
                 <a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/Ana%20Sayfa.html#" class="menu-button">Bizi paylaş</a>
             </div>
