--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -46,7 +46,7 @@
             Sitemiz reklamsız ve anonimdir 
         </p>
         <p class="about">
-            Bize katkı sağlamak için bu butona tıklamanız yeterlidir <a href="">❤️</a>
+            Bize katkı sağlamak için bu butona tıklamanız yeterlidir <a href="https://www.youtube.com/watch?v=H2-1u8xvk54">❤️</a>
         </p>
         
     </div>
