--- a/Ana Sayfa.html
+++ b/Ana Sayfa.html
@@ -25,10 +25,8 @@
                 <ul>
                     <li><a href="hakkımızda.html">Hakkımızda</a></li>
                     <li><a href="iletişim.html">Bize ulaş</a></li>       
-                    <li><a href="iletişim.html">Bizi paylaş</a></li>                         
+                    <li><a title="Facebook" href="">Destek verenler</a></li>
                 </ul>
-              
-                <ul><a href="" class="menu-button" title="facebook">İletişim</a>
                
             </div>
         </nav>
@@ -66,7 +64,7 @@
         All copyrights reserved©
     </li>
     <li>
-        Made With ❤️
+        Made With ❤️   
     </li>
    </ul>
 </body>
