--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="hakkımızda.css">
 </head>
 <body>
-    <!--header başlamgıç-->
-    <header class="container">
+     <!----navbar--->
+     <header class="container">
         <nav>
             <div class="Home active">
                 <a href="Ana Sayfa.html">Home</a>
@@ -21,11 +21,10 @@
                     <li><a href="iletişim.html">Bize ulaş</a></li>       
                     <li><a href="iletişim.html">Bizi paylaş</a></li>           
                 </ul>
-                <a href="#" class ="menu-button">New link</a>
             </div>
         </nav>
     </header>
-    <!--header bitiş-->
+    <!---navbar-->
     <!--içerik
     
     .content{
