--- a/maxwell.html
+++ b/maxwell.html
@@ -12,7 +12,7 @@
     <header class="container">
         <nav>
             <div class="Home active">
-                <a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/Ana%20Sayfa.html">Home</a>
+                <a href="Ana Sayfa.html">Home</a>
             </div>
             
             <div class="menu">
@@ -21,7 +21,6 @@
                     <li><a href="iletişim.html">Bize ulaş</a></li>       
                     <li><a href="iletişim.html">Bizi paylaş</a></li>             
                 </ul>
-                <a href="file:///D:/web%20tasar%C4%B1m/%C3%B6dev/Ana%20Sayfa.html#" class="menu-button">Bizi paylaş</a>
             </div>
         </nav>
     </header>
