--- a/maxwell.html
+++ b/maxwell.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="hakkımızda.html">Hakkımızda</a></li>
                     <li><a href="iletişim.html">Bize ulaş</a></li>       
-                    <li><a href="iletişim.html">Bizi paylaş</a></li>             
+                    <li><a href="İstek.html">İstek</a></li>             
                 </ul>
             </div>
         </nav>
