--- a/Ana Sayfa.html
+++ b/Ana Sayfa.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="hakkımızda.html">Hakkımızda</a></li>
                     <li><a href="iletişim.html">Bize ulaş</a></li>       
-                    <li><a title="Facebook" href="">Destek verenler</a></li>
+                    <li><a href="İstek.html">İstek</a></li>
                 </ul>
                
             </div>
