--- a/İstek.html
+++ b/İstek.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakkımızda</title>
-    <link rel="stylesheet" href="hakkımızda.css">
+    <title>İstek</title>
+    <link rel="stylesheet" href="İstek.css">
 </head>
 <body>
      <!----navbar--->
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="hakkımızda.html">Hakkımızda</a></li>
                     <li><a href="iletişim.html">Bize ulaş</a></li>       
-                    <li><a href="İstek.html">İstek</a></li>
+                    <li><a href="İstek.html">İstek</a></li>           
                 </ul>
             </div>
         </nav>
@@ -35,19 +35,12 @@
     
 }-->
     <section class="container" style="color: white; padding: 100px; ; ">
-        <h1 style=" font-size: 60px; text-align: center;">Hakkımızda</h1>
+        <h1 style=" font-size: 60px; text-align: center;">biyografisini yazmamızı istediğiniz var mı ?</h1>
     </section>
     <div class="paragraf">
         <p>
-           Bu sitede bilime, insanlığa ve dünyaya birşeyler katmaya çalışan bilim insanları ve fizikçilerin biyografilerini paylaşıyoruz. 
+          <a href="mailto:56768mert@gmail.com?"> <center><b>Bize yaz</b></center></a>
         </p>
-        <p>
-            Sitemiz reklamsız ve anonimdir 
-        </p>
-        <p class="about">
-            Bize katkı sağlamak için bu butona tıklamanız yeterlidir <a href="https://www.youtube.com/watch?v=H2-1u8xvk54">❤️</a>
-        </p>
-        
     </div>
 
 </body>
