--- a/İstek.html
+++ b/İstek.html
@@ -38,9 +38,9 @@
         <h1 style=" font-size: 60px; text-align: center;">biyografisini yazmamızı istediğiniz var mı ?</h1>
     </section>
     <div class="paragraf">
-        <p>
-          <a href="mailto:56768mert@gmail.com?"> <center><b>Bize yaz</b></center></a>
-        </p>
+        
+        <a href="mailto:56768mert@gmail.com?"> <center><p style="font-size:medium;"><b>Bize yaz</b></p></center></a>
+        
     </div>
 
 </body>
